--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.1.1",
 		"@types/react-router-dom": "^5.3.3",
 		"clsx": "^1.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.14.1"
+		"react-hook-form": "^7.45.2",
+		"react-router-dom": "^6.14.1",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.2",
