--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"include": ["src", "**/*.config.js"],
+	"include": ["src", ".eslintrc.cjs"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
