--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.1.1",
 		"@types/react-router-dom": "^5.3.3",
+		"axios": "^1.4.0",
 		"clsx": "^1.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
