--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.1.1",
+		"@reduxjs/toolkit": "^1.9.5",
 		"@types/react-redux": "^7.1.25",
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.4.0",
@@ -21,7 +22,6 @@
 		"react-hook-form": "^7.45.2",
 		"react-redux": "^8.1.1",
 		"react-router-dom": "^6.14.1",
-		"redux": "^4.2.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
