--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-hook-form": "^7.45.2",
 		"react-redux": "^8.1.1",
 		"react-router-dom": "^6.14.1",
+		"redux-persist": "^6.0.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
