--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.1.1",
 		"@reduxjs/toolkit": "^1.9.5",
+		"@types/js-cookie": "^3.0.3",
 		"@types/react-redux": "^7.1.25",
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.4.0",
 		"clsx": "^1.2.1",
+		"js-cookie": "^3.0.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.45.2",
